src/test/deca/context/valid/ContextAvecObjet/DeclClass/classAextendsB.deca
// Description:
//    Programme minimaliste de déclarations de classes avec extends, sans champ, sans méthode, sans main.
//
// Resultats:
//    ok
//
class B {}
class A extends B{}
