src/test/deca/context/invalid/ContextAvecObjet/DeclClass/extendsBclassA.deca
// Description:
//    Programme minimaliste de déclaration d'une classe avec extends B, sans champ, sans méthode, sans main.
//
// Resultats:
//    Erreur contextuelle ligne 8
//    type non défini

class A extends B{}
class B {}